public/assets/stylesheets/style.css
/* ... */
.collapsable .toggle-indicator a {
  background: left center no-repeat;
  background-image: url("../images/icons/blue/arr_1down.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
  color: #000;
  cursor: pointer;
  display: block;
}
.collapsable .empty .toggle-indicator a {
  background-image: url("../images/icons/grey/arr_1right.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
}
.collapsable .collapsed .toggle-indicator a {
  background-image: url("../images/icons/blue/arr_1right.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
}
.collapsable td.label-cell,
.collapsable .toggle-indicator a,
.collapsable .empty .toggle-indicator {
  padding-left: 20px;
}
.collapsable > .collapsed tr:not(.header-row) {
  display: none;
}
.collapsable > .collapsed .toggle-indicator ~ *:not(.dont-hide) {
  overflow: hidden;
  text-indent: -200%;
}
* + html .collapsable .collapsed .header-row {
  display: inline-block !important;
}
/* --- Table details -------------------------------------------------------- */
.loaded-details > td {
  padding: 0 0 5px 20px !important;
}
.loaded-details table {
  border-top: 0;
}
/* --- Sonstige ------------------------------------------------------------- */
.gruppe0 {
  background-color: #ffca5c !important;
}
.gruppe1 {
  background-color: #d60000 !important;
}
.gruppe2 {
  background-color: #f58b33 !important;
}
.gruppe3 {
  background-color: #fac599 !important;
}
.gruppe4 {
  background-color: #8bbd40 !important;
}
.gruppe5 {
  background-color: #c5de9f !important;
}
.gruppe6 {
  background-color: #b8c2d5 !important;
}
.gruppe7 {
  background-color: #7e92b0 !important;
}
.gruppe8 {
  background-color: #b02e7c !important;
}
#my_seminars .gruppe0,
#settings-notifications .gruppe0,
#my_seminars .gruppe1,
#settings-notifications .gruppe1,
#my_seminars .gruppe2,
#settings-notifications .gruppe2,
#my_seminars .gruppe3,
#settings-notifications .gruppe3,
#my_seminars .gruppe4,
#settings-notifications .gruppe4,
#my_seminars .gruppe5,
#settings-notifications .gruppe5,
#my_seminars .gruppe6,
#settings-notifications .gruppe6,
#my_seminars .gruppe7,
#settings-notifications .gruppe7,
#my_seminars .gruppe9,
#settings-notifications .gruppe9 {
  width: 1px;
}
#my_seminars .mycourse_elements > img,
#settings-notifications .mycourse_elements > img {
  display: none;
}
#my_seminars .special_nav,
#settings-notifications .special_nav {
  float: right;
}
.grey {
  background: #bbb none;
}
.white {
  background: #fff none;
}
.red_gradient {
  background-color: #e8b6b9;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e3969a), color-stop(60%, #e8b6b9), to(#e8b6b9));
  background-image: -webkit-linear-gradient(#e3969a, #e8b6b9 60%, #e8b6b9);
  background-image: -moz-linear-gradient(top, #e3969a, #e8b6b9 60%, #e8b6b9);
  background-image: -o-linear-gradient(#e3969a, #e8b6b9 60%, #e8b6b9);
  background-image: linear-gradient(#e3969a, #e8b6b9 60%, #e8b6b9);
  background-repeat: no-repeat;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe3969a', endColorstr='#ffe8b6b9', GradientType=0);
  border-top: 2px solid #b35357;
}
/* --- Styles fuer printhead und printcontent ------------------------------- */
table td.printcontent {
  background-color: #f3f5f8;
  text-align: left;
}
table td.printcontent:hover {
  background-color: #f3f5f8;
}
table td.printhead2 {
  background-image: url("../images/content_object_arr-right.png");
  border-top: 1px solid #899ab9;
  padding: 0;
}
table td.printhead3 {
  background-image: url("../images/content_object_arr-down.png");
  border-top: 1px solid #899ab9;
  padding: 0;
}
/* classes for sortable table headers --------------------------------------- */
tr.sortable {
  background-color: #f4f7f9;
}
tr.sortable th.sortasc {
  background-repeat: no-repeat;
  background-position: left center;
  background-image: url("../images/dreieck_up.png");
  padding-left: 17px;
}
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  tr.sortable th.sortasc {
    background-image: url("../images/dreieck_up@2x.png");
    -webkit-background-size: 16px 16px;
    -moz-background-size: 16px 16px;
    -o-background-size: 16px 16px;
    background-size: 16px 16px;
  }
}
tr.sortable th.sortdesc {
  background-repeat: no-repeat;
  background-position: left center;
  background-image: url("../images/dreieck_down.png");
  padding-left: 17px;
}
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  tr.sortable th.sortdesc {
    background-image: url("../images/dreieck_down@2x.png");
    -webkit-background-size: 16px 16px;
    -moz-background-size: 16px 16px;
    -o-background-size: 16px 16px;
    background-size: 16px 16px;
  }
}
.tablesorter .filtered {
  display: none;
}
.tablesorter .tablesorter-errorRow td {
  text-align: center;
  cursor: pointer;
}
/* styles for settings tables */
.settings {
  border-collapse: collapse;
  margin-bottom: 2em;
  width: 100%;
}
.settings thead th,
.settings tbody th {
  background-color: #899ab9;
  border-color: #1f3f70;
  border-style: solid;
  border-width: 0 0 1px 0;
  color: #FFFFFF;
  font-size: 12pt;
  padding: 3px 5px;
  text-align: center;
}
.settings thead th img,
.settings tbody th img,
.settings thead th svg,
.settings tbody th svg {
  vertical-align: middle;
}
.settings td,
.settings th {
  padding: 8px;
  vertical-align: top;
}
/* ... */

